--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>DAWK Labs</title>
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="./css/master.css">
   </head>
   <body>
     <nav id="floatScrollpy">
@@ -15,9 +15,23 @@
       <span class="separator"></span>
 
       <a href="#third"></a>
+      <span class="separator"></span>
+
+      <a href="#fourth"></a>
+    </nav>
+    <nav id="navbar">
+      <img src="./images/Letras 1.png" alt="" id="words">
+      <img src="./images/Ellipse 1.png" id="ellipse">
     </nav>
     <section id="first" >
-      <img class="image-background" src="/images/Group_1.png" alt="">
+      <div id="first_text" class="text">
+        <P class="greenNormal">DESARROLLO WEB</P>
+        <h1>SOLUCIONES ADAPTADAS <br> </h1>
+        <h1>A CADA PROYECTO</h1></h1>
+        <p><span class="greenIntense">Dawk Labs</span>. Tiene una solucion a tu medida.Nos enfocamos en <br> desarrollar un producto que
+        se adapte a tus necesidades</p>
+      </div>
+      <img class="image-background" src="./images/Group_1.png" alt="">
     </section>
     <section id="second">
 
